# vrchat-osc-mcp

./: .gitignore  AGENTS.md  README.md  config.yaml  main.py  pyproject.toml
scripts/: list_tools_http.py
tests/: test_avatar_change_schema_refresh.py  test_chatbox_input_semantics.py  test_chatbox_limits.py  test_mcp_tool_names.py  test_reset_semantics.py  test_stream_target_ttl.py  test_vrc_config_parser.py  test_vrc_config_resolver_avatar_id.py
vrchat_osc_mcp/: __init__.py  main.py  mcp_server.py
vrchat_osc_mcp/config/: loader.py  settings.py
vrchat_osc_mcp/domain/: adapter.py  chatbox.py  errors.py  safety.py  streams.py
vrchat_osc_mcp/observability/: logging.py
vrchat_osc_mcp/osc/: receiver.py  transport.py
vrchat_osc_mcp/vrc_config/: __init__.py  parser.py  resolver.py  schema.py
